# deepin-voice-note

./: .gitignore  CMakeLists.txt  linglong.yaml
assets/: deepin-voice-note.desktop
assets/web/: index.js
assets/web/js/: summernote_v9_2.js
debian/: changelog
src/: CMakeLists.txt  deepin-voice-note.qrc  main.cpp
src/common/: VNoteMainManager.cpp  VNoteMainManager.h  audiowatcher.cpp  jscontent.cpp  jscontent.h  vlcpalyer.cpp  webrichetextmanager.cpp  webrichetextmanager.h
src/dbus/: VoiceNoteDBusService.cpp  VoiceNoteDBusService.h
src/gui/: SidebarBlurBackground.qml  VNoteButtonBackground.qml  VNoteToolButton.qml
src/gui/dialog/: MoveDialog.qml  SettingDialog.qml  ViewPictureDialog.qml
src/gui/mainwindow/: FolderListView.qml  ItemListView.qml  MainWindow.qml  MultipleChoices.qml  RecordingView.qml  Shortcuts.qml  WebEngineView.qml  WindowTitleBar.qml
src/handler/: web_engine_handler.cpp  web_engine_handler.h
src/importolddata/tiptapmigration/: legacyformatdetector.cpp  legacyformatdetector.h  migrationhtmlconverter.cpp  migrationhtmlconverter.h  migrationhtmlparser.cpp  migrationhtmlparser.h  migrationjsonbuilder.cpp  migrationjsonbuilder.h  migrationjsonvalidator.cpp  migrationjsonvalidator.h  migrationnotedataconverter.cpp  migrationnotedataconverter.h
src/task/: loadiconsworker.cpp
src/views/: middleviewdelegate.cpp  vnotemainwindow.cpp  webrichtexteditor.cpp
src/web/: index.css  index.html  index.js
src/web/css/: bootstrapCssReset.css  reset.css
src/web/js/: summernote_v9_2.js
tests/: CMakeLists.txt
tests/at/: at-tree-annotated.yaml  at-tree.yaml  cases_mapped.yaml  cases_non_gui.yaml  cases_raw.yaml  element_gaps.yaml  suite-cases.yaml
tests/at/dump/: runtime.yaml  scanned_gaps.yaml
tests/at/yaml/: elements.yaml
tests/at/yaml/主菜单/: 主菜单.suite.yaml
tests/at/yaml/启动与退出/: 启动与退出.suite.yaml
tests/at/yaml/快捷键验证/: 快捷键验证.suite.yaml
tests/at/yaml/笔记管理/: 笔记管理.suite.yaml
tests/at/yaml/记事本管理/: 记事本管理.suite.yaml
tests/casefile/: 统信桌面操作系统 V25-语音记事本用例.xlsx
tests/src/: main.cpp
tests/src/importolddata/tiptapmigration/: ut_legacyformatdetector.cpp  ut_migrationhtmlconverter.cpp  ut_migrationhtmlparser.cpp  ut_migrationjsonbuilder.cpp  ut_migrationjsonvalidator.cpp  ut_migrationnotedataconverter.cpp
translations/: deepin-voice-note_zh_CN.ts  deepin-voice-note_zh_HK.ts  deepin-voice-note_zh_TW.ts
web-editor/: package-lock.json  package.json
web-editor/scripts/: validate-envelope.mjs
web-editor/src/extensions/: color-mark.js  font-family-mark.js  font-size-mark.js  image-block.js  voice-block.js
web-editor/src/schema/: create-schema.js  document-envelope.js  schema-version.js
web-editor/test/: schema-validation.test.mjs
web-editor/test/fixtures/: empty-document.json  formatted-text.json  heading.json  image.json  invalid-document.json  nested-list.json  task-list.json  voice-block.json
